--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.4.1",
     "react-snowfall": "^2.2.0",
     "react-tsparticles": "^2.12.2",
     "react-vertical-timeline-component": "^3.5.3",
